--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         <div class="habit" data-name="run">🏃🏽‍♂️</div>
         <div class="habit" data-name="water">💧</div>
         <div class="habit" data-name="food">🍎</div>
-        <div class="habit" data-name="journal">📕</div>
+        <div class="habit" data-name="study">📕</div>
         <div class="habit" data-name="takePills">💊</div>
+        <div class="habit" data-name="sleep">💤</div>
       </div>
 
       <div class="days"></div>
