--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <form id="form-habits">
       <div class="habits">
         <div class="habit" data-name="water">💧</div>
-        <div class="habit" data-name="food">🍎</div>
+        <div class="habit" data-name="food">🍴</div>
         <div class="habit" data-name="work">💼</div>
-        <div class="habit" data-name="study">📕</div>
-        <div class="habit" data-name="exercise">🏋️‍♀️</div>
+        <div class="habit" data-name="study">📓</div>
+        <div class="habit" data-name="exercise">💪</div>
         <div class="habit" data-name="takePills">💊</div>
         <div class="habit" data-name="sleep">💤</div>
       </div>
